# Visual-Template-Matching

./: .env.example  .gitignore  AI_Engineer_Take_Home_Task.docx  Dockerfile  README.md  api.py  app.py  detect.py  evaluate.py  pyproject.toml  test_hybrid_dino.py
src/: __init__.py  classical.py  dino.py  eloftr.py  hybrid.py  hybrid_dino.py  hybrid_yolo.py  lightglue.py  sam.py  schema.py  utils.py  vlm.py  yolo.py
test_images/: annotations.json
tests/: test_classical.py  test_dino.py  test_schema.py  test_utils.py  test_vlm.py  test_yolo.py
