[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visual-template-matching"
version = "0.1.0"
description = "Locate small visual templates inside larger scene images using classical CV and VLM-based methods"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "Pillow>=10.2.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "gradio>=4.19.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "python-multipart>=0.0.9",
]
dino = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.40.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]
yolo = [
    "ultralytics>=8.1.0",
]
lightglue = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "kornia>=0.7.0",
]
eloftr = [
    "torch>=2.0.0",
    "kornia>=0.7.0",
]
sam = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "transformers>=4.40.0",
]
all = [
    "visual-template-matching[api,dino,yolo,lightglue,eloftr,sam,dev